# django-hello-world

./: .coveragerc  .gitignore  LICENSE-APACHE  LICENSE-MIT  README.rst  db.sqlite3  pyproject.toml  setup.py
config/: settings.py
django_hello_world.egg-info/: PKG-INFO  SOURCES.txt
pages/: views.py
